main.css
/* ... */
.nav-list{
	list-style: none;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;

}

li{
	margin: 0 2rem;
	z-index: 52000;
	min-width: none;
}

.nav-link{
	/*font-family: 'The historia Demo', sans-serif;*/
	font-size: 5rem;
	padding: 1rem;
} 

.nav-link:hover,
.nav-link:focus{
	background: linear-gradient(to top, var(--principalColor), var(--secondaryColor));
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}

.top-nav.open{
	top: 0;
	border-radius: initial;
}


.menu-toggler{
	position: absolute;
	top: 5rem;
	right: 5rem;
	width: 5rem;
	height: 4rem;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	cursor: pointer;
	z-index: 55000;
	transition: transform 650ms ease-out;
}
.menu-toggler.fixedNav{
	position: fixed;
}
.menu-toggler.open{
	transform: rotate(-45deg);
	-webkit-transform: rotate(-45deg);
	-moz-transform: rotate(-45deg);
	-ms-transform: rotate(-45deg);
	-o-transform: rotate(-45deg);
}

.bar{
	background: linear-gradient(to right, var(--principalColor), var(--secondaryColor));
	width: 100%;
	height: 4px;
	border-radius: .8rem;
}

.bar.half{
	width: 50%;
}

.bar.start{
	transform-origin: right;
	transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
}

.open .bar.start{
	transform: rotate(-450deg) translateX(.8rem);
}

.bar.end{
	align-self: flex-end;
	transform-origin: left;
	transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
}
.open .bar.end{
	transform: rotate(-450deg) translateX(-.8rem);
}
/*fixed Nav*/ /*
.fixedNav #navigationBar{
	position: fixed;
	top: 0;
	z-index: 55000;
}
#navigationBar{
	width: 100%;
}  
/* End fixed Nav*/

.landing-text{
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 100%;
	text-align: center;
	z-index: 1;
}

.landing-text h1{
	font-size: 20rem;
	/*font-family: 'The historia Demo', sans-serif;*/
	background: linear-gradient(to top, var(--principalColor), var(--secondaryColor));
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	padding: 1rem;
	user-select: none;
}

.landing-text h6{
	font-size: 2rem;
	font-weight: 300px;
}
/*End header*/

/*Start about*/
.about.container{
	display: flex;
	align-items: center;
	justify-content: center;
}

.about-heading{
	text-align: center;
	text-transform: uppercase;;
	line-height: 0;
	margin-bottom: 6rem;
}

.about-heading h1{
	font-size: 10rem;
	opacity: .3;
}

.about-heading h6{
	font-size: 2rem;
	font-weight: 300;
}

.profile-img{
	flex: 1;
	margin-right: 5rem;
}

.about-details{
	flex: 1;
}
.about-details p a{
	color: var(--secondaryColor);
	text-decoration: underline;

}
.about-details p a:hover{
	color: var(--principalColor);
}
.social-media{
	margin-top: 5rem;
}

.social-media i{
	font-size: 5rem;
	transition: color 650ms;
}

.fa-linkedin:hover{
	color: #0077b5;
}

.fa-flickr:hover{
	color: #0063dc;
}

.fa-dribbble-square:hover{
	color: #ea4c89;
}
.fa-github-square:hover{
	color: #2b3137;
}

/*End about*/

/*Start services*/
.my-skills{
	margin-top: 10rem;
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
	grid-gap: 2.5rem;
	text-align: center;
}

.skill{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 2rem;
}

.skill h1{
	text-transform: uppercase;
	letter-spacing: 2px;
	margin: 2rem -2px 2rem 0;
}

.icon-container{
	width: 10rem;
	height: 10rem;
	border: 3px solid var(--principalColor);
	/*background-color: var(--secondaryColor);*/
	margin-bottom: 2rem;
	display: flex;
	transform: rotate(45deg);
}
.icon-container i{
	color: var(--secondaryColor);
	font-size: 5rem;
	margin: auto;
	transform: rotate(-45deg);
}

/*End services*/

/*Start portfolio*/

.portfolio-item{
	display: flex;
	align-items: center;
	justify-content: center;
	margin-bottom: 5rem;
}

.portfolio-item-last-child{
	margin-bottom: 0;
}

.portfolio-img {
    flex: 1;
}

.portfolio-description {
    flex: 1;
}

.portfolio-description h1{
	font-size: 3rem;
	font-weight: 300;
	margin: 1rem 0;
}

.portfolio-description h6{
	font-size: 1.5rem;
	text-transform: uppercase;
	font-weight: 300;
	opacity: 0.3;
}

.portfolio-description .cta{
	display: inline-block;
	margin-top: 2.5rem;
	font-size: 2.5rem;
	text-transform: uppercase;
	color: var(--linkColorItem);
	transition: color 650ms;
	border: 1px solid transparent;
    padding: .375rem .75rem;
    line-height: 1.5;
}
.portfolio-description .cta .separator{
	border-left: 0.5px solid var(--linkColorItem) ;
}


.portfolio-description .cta:hover{
	color: var(--linkColorItemHover);
}
.technologies-container{
	display: grid;
	grid-template-columns: repeat(8, 1fr);
	grid-gap: 8px 8px;
	justify-content: center;
	margin-top: 15px
}

/*End services*/

/*Start timeline*/
.timeline ul{
	border-left: 4px solid var(--principalColor);
	border-radius: .8rem;
	background-color: rgba(0,0,0,0.05);
	margin: 0 auto;
	position: relative;
	padding: 5rem;
	list-style: none;
	text-align: left;
	width: 70%;
}

.timeline h1{
	font-size: 2rem;
	text-transform: uppercase;
	font-weight: 300;
	margin-bottom: 1rem;
	opacity: .3;
}

.timeline .date{
	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
	margin-bottom: 1rem;
	padding-bottom: 1rem;
	position: relative;
}

.timeline .date:last-of-type{
	padding-bottom: 0;
	margin-bottom: 0;
	border: none;
} 

.timeline .date::before,
.timeline .date::after{
	position: absolute;
	display: block;
	top: 50%;
	transform: translateY(-50%);
}

.timeline .date::before{
	content: attr(data-date);
	left: -21rem;
	text-align: right;
	min-width: 12rem;
	font-size: 1.5rem;
}
.timeline .date::after{
	content: '';
	box-shadow: 0 0 0 4px var(--secondaryColor);
	border-radius: 100%;
	left: -8rem;
	height: 1.5rem;
	width: 1.5rem;
	background-color: var(--principalColor);
}
/*End timeline*/

/*Start contact*/
.contact{
	background-color: #221E3F;
}
form{
	width: 70%;
	margin: 0 auto;
}
form label{
	font-size: 1.5rem;
}
/* ... */

